--- a/assets/CSS/index.css
+++ b/assets/CSS/index.css
@@ -1,34 +1,35 @@
-*{
-    margin:0;
+* {
+    margin: 0;
 }
 
-.contenedor{
-    width:90%;
+.contenedor {
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
 }
 
+.jumbotron {
+    max-height: 800px;
+    padding: 20px 15px;
+}
 
-.photos-rover{
+.photos-rover {
     display: grid;
-    gap:.5rem;
-    
+    gap: .5rem;
     /* grid-template-columns: repeat(auto-fit,minmax(10rem,1fr)); */
-    grid-template-columns: repeat(auto-fit,minmax(min(50%,10rem),1fr));
-
-     max-height: 700px;
+    grid-template-columns: repeat(auto-fit, minmax(min(50%, 10rem), 1fr));
+    max-height: 700px;
     /*
     overflow-x: hidden;
     verflow-y: scroll; */
-    
 }
-.rovert-img{
+
+.rovert-img {
     max-width: 100%;
     max-height: 100%;
     /* display:inline-block; */
-    
 }
 
-.subtitle{
+.subtitle {
     text-align: center;
 }
