--- a/assets/CSS/index.css
+++ b/assets/CSS/index.css
@@ -8,28 +8,32 @@
     margin-right: auto;
 }
 
+
+/*Foto del dia*/
+
 .jumbotron {
-    max-height: 800px;
-    padding: 20px 15px;
+    /* box-sizing: border-box; */
+    width: 100%;
+    border: solid black 1px;
+    color: whitesmoke;
 }
+
+.jumbotron img {
+    width: 90%;
+    max-height: 400px;
+    object-fit: cover;
+}
+
+
+/*Fotos del rover*/
 
 .photos-rover {
     display: grid;
     gap: .5rem;
     /* grid-template-columns: repeat(auto-fit,minmax(10rem,1fr)); */
-    grid-template-columns: repeat(auto-fit, minmax(min(50%, 10rem), 1fr));
-    max-height: 700px;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 15rem), 1fr));
+    /* grid-auto-rows: 100%; */
     /*
     overflow-x: hidden;
     verflow-y: scroll; */
-}
-
-.rovert-img {
-    max-width: 100%;
-    max-height: 100%;
-    /* display:inline-block; */
-}
-
-.subtitle {
-    text-align: center;
 }
