--- a/CSS/index.css
+++ b/CSS/index.css
@@ -18,25 +18,23 @@ body{
 
 .jumbotron {
     box-sizing: border-box;
-    max-height: 700px;
     /* font-size: 1rem; */
     /* height: 500px; */
+    max-height: 1500px;
     width: 100%;
-    padding:10px 0;
-    font-size: 1.5em;
+    padding:10px;
+    font-size: 1em;
 }
-#info-imgday{
-    font-size: .6em;
-}
-
 .jumbotron img {
-    
-    object-fit: fill;
+    object-fit:fill;
+    max-height: 400px;
+    margin: 0 1em;
+}
+.jumbotron p{
+    max-height: 300px;
+    overflow: auto;
 }
 
-#api-imgday{
-    max-height: 300px;
-}
 
 /*Modal imagen del dia*/
 
