--- a/CSS/index.css
+++ b/CSS/index.css
@@ -20,15 +20,28 @@ body{
     box-sizing: border-box;
     /* font-size: 1rem; */
     /* height: 500px; */
-    max-height: 1500px;
+    max-height: 30em;
     width: 90%;
     padding:10px;
     font-size: 1em;
+}
+.jumbotron .container{
+    background-color: black;
+    box-sizing: border-box;
+    /* max-height: 30em; */
+    width: 90%;
+    padding:10px;
+    font-size: 1em;
+
 }
 .jumbotron img {
     object-fit:fill;
     max-height: 500px;
     margin: 0 1em;
+}
+.jumbotron iframe{
+    max-height: 100em;
+
 }
 .jumbotron p{
     max-height: 300px;
