--- a/CSS/index.css
+++ b/CSS/index.css
@@ -51,10 +51,10 @@ body{
 }
 
 /*fotos epic*/
-.epic-imagenes{
+.epic-imagenes .container{
     display:grid;
     grid-template-columns: repeat(auto-fill,minmax(min(100%,200px),1fr));
-    gap:10px
+    gap:20px
 }
 
 
