--- a/assets/CSS/index2.css
+++ b/assets/CSS/index2.css
@@ -1,11 +1,48 @@
-#jumbotron_img {
-    max-height: 25em;
-    max-width: 95%;
-}
-
-@media (max-width:900px) {
-    .jumbotron_card .card-body {
-        max-height: 25em;
-        overflow-y: scroll;
-    }
-}
+        /*JUMBOTRON*/
+        
+        .card {
+            /* border-style: none; */
+            overflow: hidden;
+        }
+        
+        #jumbotron_img {
+            max-height: 25em;
+            max-width: 90%;
+            transition: all .5s ease-in-out;
+        }
+        
+        #jumbotron_img:hover {
+            -webkit-transform: scale(1.3);
+            transform: scale(1.2);
+        }
+        /*GALERIA IMAGENES TIERRA*/
+        
+        #galeria_fotos {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 1em;
+        }
+        /*QUERYS*/
+        /*JUMBOTRON*/
+        
+        @media (max-width:900px) {
+            /* #galeria_fotos {
+                grid-template-columns: repeat(2, 1fr);
+                gap: .5em;
+            } */
+        }
+        
+        @media (max-width:700px) {
+            .jumbotron_card .card-body {
+                max-height: 25em;
+                overflow-y: scroll;
+            }
+        }
+        
+        @media (max-width:550px) {
+            #galeria_fotos {
+                grid-template-columns: 1fr;
+                gap: .2em;
+            }
+        }
+        /*CLASES VARIAS*/
